# orangewood

./: README.md  package.xml  setup.py
config/: slam_toolbox_params.yaml
launch/: gazebo.launch.py  slam.launch.py
meshes/: Tire_r.dae  Tire_r.stl  frame_connector_r.dae  frame_connector_r.stl  small_chasis_1_r.dae  small_chasis_1_r.stl  small_chasis_2_r.dae  small_chasis_2_r.stl  tire_rim_r.dae  tire_rim_r.stl  top chasis 4WD_r.dae  top_chasis_4WD_r.stl
rover_description/: teleop_hold_node.py
urdf/: rover.urdf  rover.urdf.xacro  rover_gazebo_fortress.xacro
worlds/: earthquake_world.sdf
