<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_description</name>
  <version>0.0.1</version>
  <description>4WD Skid-Steer Scouting Rover — Gazebo Fortress</description>

  <maintainer email="you@email.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 core -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- Gazebo Fortress -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
